fixed homepage url

--- a/emfas-site/package.json
+++ b/emfas-site/package.json
@@ -1,6 +1,6 @@
 {
   "name": "emfas-site",
-  "homepage": "https://emfas.org",
+  "homepage": "https://emfas.org/njitDev",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
